<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="es.unex.asee.frojomar.asee_ses.activities.appointments.AddAppointmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Title -->

        <LinearLayout
            android:id="@+id/fixed_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_center_cab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/name_center_cab"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/center_name"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/adress_center_cab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/adress_center_cab"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adress_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adress_center"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tlfno_center_cab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/tlfno_center_cab"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="16sp"
                        android:layout_height="16sp"
                        android:src="@android:drawable/ic_menu_call" />

                    <TextView
                        android:id="@+id/tlfno_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5sp"
                        android:text="@string/tlfno_center"
                        android:textSize="16sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/doctor_appointment_cab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/doctor_appointment_cab"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/doctor_appointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor_appointment"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tlfno_appointment_cab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tlfno_appointment_cab"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/fixed_data"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>


        <LinearLayout
            android:id="@+id/telephone_appointment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tlfno_appointment_cab"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/desc_appointment_ej"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/telephone_appointment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tlfno_center"/>
            <Button
                android:id="@+id/change_tlfno_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_tlfno" />
        </LinearLayout>

        <TextView
            android:id="@+id/desc_appointment_cab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_appointment_cab"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/telephone_appointment_layout"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>


        <EditText
            android:id="@+id/desc_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/desc_appointment_cab"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/desc_appointment_ej"
            android:inputType="textShortMessage">

            <requestFocus />
        </EditText>

        <!-- Time and Date -->

        <TextView
            android:id="@+id/time_and_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/desc_appointment"
            android:layout_marginTop="15dp"
            android:text="@string/time_and_date_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/time_and_date"
            android:layout_marginTop="12dp"
            android:text="@string/no_date_set_string" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/time_and_date"
            android:layout_marginTop="12dp"
            android:text="@string/no_time_set_string" />

        <Button
            android:id="@+id/date_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/date"
            android:text="@string/choose_date_string" />

        <Button
            android:id="@+id/time_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/date_picker_button"
            android:layout_below="@id/time"
            android:text="@string/choose_time_string" />

        <!-- Buttons -->

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="25dp"
            android:text="@string/cancel_string" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/reset_string" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/submit_string" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
