<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangeTelephoneActivity"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tlfno_appointment_cab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tlfno_appointment_cab"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <EditText
        android:id="@+id/tlfno_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tlfno_center">
        <requestFocus/>

    </EditText>

    <RadioButton
        android:id="@+id/set_default_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_default_number"
        android:layout_margin="10dp"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/cancel_string"/>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/cambiar_string"/>
    </LinearLayout>

</LinearLayout>